Freedom Sanbox Ant Deploy/src/objects/SyncScheduleJob__c.object
<CustomObject>
    <fields>
        <fullName>Batch_End_Time__c</fullName>
        <label>Batch_End_Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Batch_Start_Time__c</fullName>
        <label>Batch_Start_Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>No_Of_Records__c</fullName>
        <label>No_Of_Records</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SyncScheduleJob</label>
    <nameField>
        <displayFormat>Job-{0000}</displayFormat>
        <label>SyncScheduleJob Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SyncScheduleJobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>